syntax = "proto3";

package pwt;

option go_package = "github.com/lkyzhu/pwt/pb";

message StandardClaims {
    string Issuer = 1;
    string Subject = 2;
    repeated string Audience = 3;
    int64 ExpiresAt = 4;
    int64 NotBefore = 5;
    int64 IssuedAt = 6;
    string ID = 7;
}

